--- a/33/CSS/style.css
+++ b/33/CSS/style.css
@@ -22,3 +22,13 @@ font-weight: 700px;
         border: 2px solid rgb(0, 47, 255);
     }
    
+    .card:hover .course-img{
+        transform: scale(1.2);
+    }
+    .course-img{
+        transition: all .7s;
+    }
+    .card{
+        overflow: hidden;
+       
+    }
